add copy function

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <a href="index.html" class="nav-link active">Home</a>
       </li>
       <li class="nav-item">
-        <a href="Cracker.html" class="nav-link">Cracker</a>
+        <a href="cracker.html" class="nav-link">Cracker</a>
       </li>
       <li class="nav-item">
-        <a href="About.html" class="nav-link">About</a>
+        <a href="about.html" class="nav-link">About</a>
       </li>
     </ul>
     </div>
