copy button eventlistener

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="card-body">
             <h5 class="card-title">Encrypted/Decrypted Message:</h5>
             <p class="card-text" id="cipher"></p>
-            <a href="#" class="btn btn-primary btn-sm" id="cpy-btn">Copy This</a>
+            <button class="btn btn-primary btn-sm" id="cpy-btn">Copy This</button>
           </div>
         </div>
       </form>
